Added cross validation

--- a/pybooks/SVM_cross_validation.ipynb
+++ b/pybooks/SVM_cross_validation.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -27,23 +27,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "train_data_loc = '../results/data_without_na.csv';\n",
     "train_labels_loc = '../dataset/trueclass.txt';\n",
-    "test_labels_loc = '../dataset/testdata/testdata.txt';\n",
     "\n",
-    "data_df = pd.read_csv(train_data_loc, sep =\",\", index_col = [0], header = 0);\n",
-    "labels_df = pd.read_csv(train_labels_loc, sep=\" \", header = 0, index_col= 1);"
+    "data_df = pd.read_csv(train_data_loc, sep =\",\", index_col = 0);\n",
+    "labels_df = pd.read_csv(train_labels_loc, sep=\" \");\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -51,48 +50,56 @@
    "source": [
     "# load the model\n",
     "\n",
-    "model = joblib.load('../models/svm_training_split.pkl');\n",
+    "model = joblib.load('../models/svm_training_split_pearson_fit.pkl');\n",
     "\n",
     "# Prepare test and training set\n",
     "\n",
-    "#label_numpy_arr = labels_df[:,0].ravel();\n",
+    "label_numpy_arr = labels_df.iloc[:,0]\n",
     "\n",
-    "X_train, X_test, y_train, y_test = cross_validation.train_test_split (\n",
-    "    data_df, labels_df, test_size=0.2, random_state=0)\n"
+    "#X_train, X_test, y_train, y_test = cross_validation.train_test_split (\n",
+    "#    data_df, labels_df, test_size=0.2, random_state=0)\n",
+    "\n",
+    "#cscore = model.score(X_test, y_test) \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
+   "source": [
+    "### Find the mean accuracy on the model \n",
+    "\n",
+    "Cross validate the results on model by k folding.\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "cscore = model.score(X_test, y_test)   "
+    "scores = cross_validation.cross_val_score(model,data_df,label_numpy_arr,cv=5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.58375\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(cscore)"
+    "print(scores)\n",
+    "print('Accuracy: %0.2f (+/-%0.2f)' % (scores.mean(), scores.std()*2))"
    ]
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python [conda root]",
    "language": "python",
