--- a/pybooks/SVM_model_generation.ipynb
+++ b/pybooks/SVM_model_generation.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -28,20 +28,24 @@
     "train_labels_loc = '../dataset/trueclass.txt';\n",
     "test_labels_loc = '../dataset/testdata/testdata.txt';\n",
     "\n",
-    "data_df = pd.read_csv(train_data_loc, sep =\",\", index_col = [0], header = 0);\n",
-    "labels_df = pd.read_csv(train_labels_loc, sep=\" \", header = 0, index_col= 1);"
+    "#data_df = pd.read_csv(train_data_loc, sep =\",\", index_col = 0, header = 0);\n",
+    "#labels_df = pd.read_csv(train_labels_loc, sep=\" \", header = None, index_col= 1);\n",
+    "\n",
+    "data_df = pd.read_csv(train_data_loc, sep =\",\", index_col = 0);\n",
+    "labels_df = pd.read_csv(train_labels_loc, sep=\" \", index_col= 1);\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Now you can load the pickel from disk and play again .\n"
+    "### Creating Crossvalidation sets\n",
+    "Here we are creating training and testing dataset for crossvalidation. test_size = 0.2 means that we have to take 80% data for training and rest we use for result.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -53,17 +57,31 @@
     "#label_numpy_arr = labels_df[:,0].ravel();\n",
     "\n",
     "X_train, X_test, y_train, y_test = cross_validation.train_test_split (\n",
-    "    data_df, labels_df, test_size=0.2, random_state=0)\n",
+    "    data_df, labels_df, test_size=0.5, random_state=0)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SVC(C=1.0, cache_size=200, class_weight=None, coef0=0.0,\n",
+       "  decision_function_shape=None, degree=3, gamma='auto', kernel='rbf',\n",
+       "  max_iter=-1, probability=False, random_state=None, shrinking=True,\n",
+       "  tol=0.001, verbose=False)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# X train - training data\n",
     "# X Test - testing data\n",
@@ -78,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -86,32 +104,32 @@
     {
      "data": {
       "text/plain": [
-       "['../models/svm_training_split.pkl',\n",
-       " '../models/svm_training_split.pkl_01.npy',\n",
-       " '../models/svm_training_split.pkl_02.npy',\n",
-       " '../models/svm_training_split.pkl_03.npy',\n",
-       " '../models/svm_training_split.pkl_04.npy',\n",
-       " '../models/svm_training_split.pkl_05.npy',\n",
-       " '../models/svm_training_split.pkl_06.npy',\n",
-       " '../models/svm_training_split.pkl_07.npy',\n",
-       " '../models/svm_training_split.pkl_08.npy',\n",
-       " '../models/svm_training_split.pkl_09.npy',\n",
-       " '../models/svm_training_split.pkl_10.npy',\n",
-       " '../models/svm_training_split.pkl_11.npy']"
+       "['../models/svm_training_split_pearson_fit.pkl',\n",
+       " '../models/svm_training_split_pearson_fit.pkl_01.npy',\n",
+       " '../models/svm_training_split_pearson_fit.pkl_02.npy',\n",
+       " '../models/svm_training_split_pearson_fit.pkl_03.npy',\n",
+       " '../models/svm_training_split_pearson_fit.pkl_04.npy',\n",
+       " '../models/svm_training_split_pearson_fit.pkl_05.npy',\n",
+       " '../models/svm_training_split_pearson_fit.pkl_06.npy',\n",
+       " '../models/svm_training_split_pearson_fit.pkl_07.npy',\n",
+       " '../models/svm_training_split_pearson_fit.pkl_08.npy',\n",
+       " '../models/svm_training_split_pearson_fit.pkl_09.npy',\n",
+       " '../models/svm_training_split_pearson_fit.pkl_10.npy',\n",
+       " '../models/svm_training_split_pearson_fit.pkl_11.npy']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "joblib.dump(clf,'../models/svm_training_split.pkl')"
+    "joblib.dump(clf,'../models/svm_training_split_pearson_fit.pkl')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -120,33 +138,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.58375\n"
+      "0.55075\n"
      ]
     }
    ],
    "source": [
     "cscore = clf.score(X_test, y_test)     \n",
     "print(cscore)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'numpy.ndarray'>\n"
-     ]
-    }
-   ],
-   "source": [
-    "t = y_train.iloc[:,0].ravel();\n",
-    "print(type(t))"
    ]
   }
  ],
