--- a/pybooks/variance_based_fs.ipynb
+++ b/pybooks/variance_based_fs.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -32,7 +32,7 @@
     "#train_data = numpy.loadtxt(train_data_loc);\n",
     "#train_labels = numpy.loadtxt(train_labels_loc);\n",
     "#labels_df = pd.read_csv(train_labels_loc, sep=\" \", header = 0);\n",
-    "data_df = pd.read_csv(train_data_loc, sep=\" \", header = 0);\n"
+    "data_df = pd.read_csv(train_data_loc, sep=\" \", header = 0, index_col=[0]);\n"
    ]
   },
   {
@@ -46,11 +46,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of Columns :  29638\n",
+      "Number of Rows:  7999\n",
+      "Number of Columns after Nan:  29622\n",
+      "Number of Rows after Nan:  7999\n"
+     ]
+    }
+   ],
    "source": [
     "# See rows and columns\n",
     "\n",
@@ -64,15 +75,17 @@
     "# Drop columns that have all rows as Nan's\n",
     "data_df = data_df.dropna(how='all',axis = 'columns');\n",
     "\n",
-    "data_df = data_df.dropna(how = 'any', axis = 'index');\n",
+    "#data_df = data_df.dropna(how = 'any', axis = 'index');\n",
     "\n",
     "# Number of columns dropped = 16\n",
     "\n",
     "# Drop 1st row and 1st column  as they contain just index \n",
     "# \n",
     "\n",
-    "data_df = data_df.drop(data_df.columns[0], axis=1)\n",
-    "data_df = data_df.drop(data_df.index[0])\n",
+    "#data_df = data_df.drop(data_df.columns[0], axis=1)\n",
+    "\n",
+    "#data_df = data_df.drop(data_df.index[0])\n",
+    "\n",
     "print('Number of Columns after Nan: ', len(data_df.columns))\n",
     "\n",
     "print('Number of Rows after Nan: ', len(data_df))\n",
@@ -95,11 +108,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Features in dataframe  29622\n",
+      "Selector is created. Now fitting the data\n"
+     ]
+    }
+   ],
    "source": [
     "#column_variance = data_df.var();\n",
     "\n",
@@ -124,22 +146,31 @@
     "#print('Features in dataframe ', len(df.columns))\n",
     "\n",
     "print('Features in dataframe ', len(data_df.columns))\n",
-    "selector = VarianceThreshold(threshold= 0.25);\n",
+    "cutoff_threshold = 0.513320024;\n",
+    "selector = VarianceThreshold(threshold= cutoff_threshold);\n",
     "print('Selector is created. Now fitting the data')\n",
     "selected_features = selector.fit_transform(data_df);\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "After Variance threshold features are reduced to (7999, 16)\n"
+     ]
+    }
+   ],
    "source": [
     "print('After Variance threshold features are reduced to',selected_features.shape)\n",
     "df = pd.DataFrame(data= selected_features);\n",
-    "df.to_csv('feature_selection.csv')\n"
+    "df.to_csv('feature_selection'+str(cutoff_threshold)+'.csv')\n"
    ]
   },
   {
@@ -151,8 +182,30 @@
    "outputs": [],
    "source": [
     "#data_df.loc[1,0]\n",
-    "colnames = df.columns.values.tolist()\n",
-    "#print(colnames)"
+    "#colnames = df.columns.values.tolist()\n",
+    "#print(colnames)\n",
+    "\n",
+    "print('Number of Columns : ',len(data_df.columns))\n",
+    "print('Number of Rows: ',len(data_df))\n",
+    "\n",
+    "df = data_df.dropna(how='all',axis = 'columns');\n",
+    "\n",
+    "print(len(df))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "print(len(data_df.columns))\n",
+    "\n",
+    "print(data_df.isnull().any().any())\n",
+    "print(df.isnull().any().any())\n",
+    "\n"
    ]
   }
  ],
